# DeadPixelQC_OFX

./: CMakeLists.txt  CONTEXT_SUMMARY.md  README.md  WORK_SUMMARY.md
cmake/: DeadPixelQC_OFXConfig.cmake.in
core/: ColorMetrics.h  ConnectedComponents.h  Fixer.h  PixelFormatAdapter.h  SpatialDetector.h  TemporalTracker.h  Types.h
docs/: ARCHITECTURE.md  PARAMS.md  resolve_debug.md
export/: ExportCSV.cpp  ExportCSV.h  ExportDefectMap.cpp  ExportDefectMap.h  ExportJSON.cpp  ExportJSON.h  ImportDefectMap.cpp  ImportDefectMap.h
log/: EventLogger.cpp  EventLogger.h  MapAccumulator.cpp  MapAccumulator.h
model/: DataTypes.h  DefectMap.cpp  DefectMap.h  EventModel.cpp  EventModel.h
plugin/: DebugLog.h  OfxSimple.h  OfxUtil.cpp  OfxUtil.h  PluginMain.cpp  PluginMainSimple.cpp  PluginParams.cpp  PluginParams.h  PluginParamsBasic.cpp  PluginParamsConstants.cpp  PluginParamsDetection.cpp  PluginParamsGetters.cpp  PluginParamsRepair.cpp  PluginParamsSimple.h  PluginParamsStructure.md  PluginParamsTemporal.cpp  PluginParamsWorkflow.cpp
plugin/Workers/: FixWorker.cpp  FixWorker.h  SpatialWorker.cpp  SpatialWorker.h  TemporalWorker.cpp  TemporalWorker.h
tests/: SyntheticGenerator.cpp  SyntheticGenerator.h  UnitTests.cpp
tools/: offline_runner.cpp
